FIxed missing margin And content that going beyond the width

--- a/frontend/src/app/components/page-with-sidebar/page-with-sidebar.component.sass
+++ b/frontend/src/app/components/page-with-sidebar/page-with-sidebar.component.sass
@@ -1,10 +1,14 @@
 .container
-  width: 100vw
   height: 100vh
   display: flex
   flex-direction: row
 
 .main
+  display: flex
+  flex-direction: column
   width: 100%
+  height: 100%
   min-width: calc(100vw - 23%)//1110px
 
+.content
+  height: calc(100% - 70px)
